# Test-case-Simetra

./: .dockerignore  .env.exemple  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
infra/: docker-compose.local.yml  requirements.api.txt  requirements.extractor.txt  requirements.migrations.txt  requirements.txt
src/api/: Dockerfile  main.py  routers.py
src/api/endpoints/: __init__.py  vehicles.py
src/api/schemas/: vehicles.py
src/core/configs/: __init__.py  api.py  exel.py  postgres.py
src/core/db/: database.py
src/core/db/models/: __init__.py  base.py  vehicles.py
src/core/db/repositories/: base.py  vehicles.py
src/core/utils/: logger.py
src/exel_to_postgis/: Dockerfile  load_data.py
src/exel_to_postgis/helpers/: exel.py  postgres.py
src/exel_to_postgis/schemas/: exel.py
src/migrations/: Dockerfile  env.py
src/migrations/versions/: 2024_03_06_1149-57041490801a_test_init_migration.py
test_data/: test_data.xlsx
